package behavioral.observer.player;

public interface PlayerDataListener {
    public void listen(PlayerData p);
}
